--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "This is the backend of the smms",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -24,7 +23,10 @@
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.10.0"
+    "mongoose": "^6.10.0",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1",
+    "twilio": "^4.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
